- Allow the creation of files/directories that start with "~".

BUG:117473

svn path=/trunk/KDE/kdelibs/; revision=1174616